Revision history for Perl extension Coro.

TODO: should explore PerlIO::coroaio (perl leaks like hell).
TODO: channel->maxsize(newsize)?
TODO: http://www.microsoft.com/msj/archive/s2ce.aspx
TODO: __GCC_HAVE_DWARF2_CFI_ASM

6.10 Tue Oct  9 01:14:27 CEST 2012
	- updated ecb.h, it had a typo that caused it to not compile on many
          big endian systems (reported by many people).
        - disable memory fences in ecb.h to improve portability.

6.09 Sat Oct  6 23:25:02 CEST 2012
	- Coro::EV I/O watchers were not interruptible by exceptions
          (Coro::State::throw) (testcase by sten).
        - ->throw now puts threads into the ready queue, as this seems to
          be expected by existing code, and code that doesn't cope with spurious
          wakeups needs fixing anyway.
	- use fd -1 in mmap.
        - cast I32 to int in error message printf.
        - warn about broken so-called "hardened" kernels.

6.08 Fri Apr 13 12:05:47 CEST 2012
	- be more aggressive about exiting like perl does - formerly,
          exiting from the non-main thread would not execute END blocks.

6.07 Fri Nov 11 21:21:48 CET 2011
	- work around a bug in PerlIO (setting $SIG{__WARN__} to a PVCV).
        - update ecb.h.

6.06 Mon Aug  8 23:59:48 CEST 2011
	- cygwin unfortunately patches the stack at runtime, so we use the pthreads
          backend, which is an order of magnitude slower. unfortunately, cygwins
          pthread implementation isn't very complete either, so allocate the stack
          twice just to be sure.
          (note: cygwin also enables mymalloc, which is NOT THREADSAFE ON WINDOWS,
          in its ithreaded perl - best recompile cygwin and use the 'w'indows
          backend for much better performance. also disable ithreads for
          even better performance...).

6.05 Thu Aug  4 21:36:36 CEST 2011
	- blush, condvar values would not be propagated from send to recv anymore
          (reported by Chip Salzenberg).