@@ -40,13 +40,13 @@ EOF
 }
 
 if (eval { require EV }) {
-   if ($EV::VERSION < 3.3) {
+   if ($EV::VERSION < 4.0) {
       print <<EOF
 
 *** 
 *** WARNING: EV version $EV::VERSION found, NOT building EV support.
 ***
-*** This version is ABI-incompatible with Coro, please upgrade to at least 3.3.
+*** This version is ABI-incompatible with Coro, please upgrade to at least 4.0.
 ***
 
 EOF
@@ -80,7 +80,7 @@ WriteMakefile(
        #Event		=> 1.06,
 
        # for Coro::EV
-       #EV               => 3.3,
+       #EV               => 4.0,
 
        # for Coro::AIO
        #IO::AIO          => 2.3,
@@ -97,10 +97,11 @@ WriteMakefile(
     META_MERGE => {
         recommends => {
            Event         => 1.08,
-           EV            => 3.0,
+           EV            => 4.0,
            IO::AIO       => 3.1,
-           AnyEvent::AIO => 1.0,
            BDB           => 0,
+           AnyEvent      => 7.0,
+           AnyEvent::AIO => 1.0,
            AnyEvent::BDB => 1.0,
         }
     },
